--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="ecomapp">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
+
     <!-- Start nav bar -->
     <nav class="navbar navbar-expand-lg fixed-top" id="navbarAll">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="navbarBurgrBtn">
@@ -59,8 +60,58 @@
     </div>
     <!-- End modal-->
 
-    <div class="container-fluid">
-
+    <!-- Start du container pricipal -->
+    <div class="container">
+      <div class="col">
+        <!-- Start du jumbotron -->
+        <div class="jumbotron">
+          <h1>Bienvenue sur Greyphoni</h1>
+          <p>Présentation du cul</p>
+        </div>
+        <!-- End du jumbotron -->
+      </div>
     </div>
+    <!-- End du container pricipal -->
+
+    <!-- Start footer -->
+    <footer>
+      <div class="row">
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <h3>Produits</h3>
+          <ul>
+            <li><a href="https://www.apple.com/fr/%22%3EApple"></a></li>
+            <li><a href="https://consumer.huawei.com/fr/%22%3EHuawei"></a></li>
+            <li><a href="https://www.samsung.com/fr/%22%3Esamsung"></a></li>
+          </ul>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <h3>Nous contacter</h3>
+          <ul>
+            <li><i class="fas fa-building"></i> les amelots,18260 ASSIGNY</li>
+            <li><i class="fas fa-phone"></i> 02-48-73-83-09</li>
+            <li><i class="fas fa-envelope"></i> Greyphoni@gmail.com</li>
+          </ul>
+        </div>
+        <ul>
+          <div class="col-sm-12 col-md-6 col-lg-2">
+            <li>
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-snapchat-ghost"></i>
+            </li>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-2">
+            <li>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-twitter"></i>
+            </li>
+          </div>
+        </ul>
+      </div>
+      <div class="footer-copyright text-center py-3">© 1522 Copyright:
+        <a href="#"> Greyphoni</a>
+      </div>
+    </footer>
+    <!-- End footer -->
+    
   </body>
 </html>
