Bonjour ceci est un commit

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Greyphoni</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <script src="assets/js/jquery-3.3.1.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
@@ -79,9 +80,9 @@
         <div class="col-sm-12 col-md-6 col-lg-4">
           <h3>Produits</h3>
           <ul>
-            <li><a href="https://www.apple.com/fr/%22%3EApple"></a></li>
-            <li><a href="https://consumer.huawei.com/fr/%22%3EHuawei"></a></li>
-            <li><a href="https://www.samsung.com/fr/%22%3Esamsung"></a></li>
+            <li><a href="https://www.apple.com/fr/%22%3EApple">Apple</a></li>
+            <li><a href="https://consumer.huawei.com/fr/%22%3EHuawei">Huawei</a></li>
+            <li><a href="https://www.samsung.com/fr/%22%3Esamsung">samsung</a></li>
           </ul>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
@@ -112,6 +113,6 @@
       </div>
     </footer>
     <!-- End footer -->
-    
+
   </body>
 </html>
