--- a/index.html
+++ b/index.html
@@ -1,66 +1,92 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Greyphoni</title>
-    <script src="assets/js/jquery-3.3.1.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/script.js"></script>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-  </head>
-  <body>
-    <!-- Start nav bar -->
-    <nav class="navbar navbar-expand-lg fixed-top" id="navbarAll">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="navbarBurgrBtn">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand" href="#" id="navbarLogo">Greyphoni</a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#" id="navbarLink">Samsung</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" id="navbarLink">Apple</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" id="navbarLink">Huawei</a>
-          </li>
-        </ul>
-      </div>
-      <form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="navbarSearchBtn">Search</button>
-      </form>
-      <a type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#navbarModal" id="navbarModalBtn">Panier</a>
-    </nav>
-    <!-- End nav bar -->
-
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Greyphoni</title>
+  <script src="assets/js/jquery-3.3.1.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <script src="assets/js/script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
+</head>
+<body>
+  <!-- Start nav bar -->
+  <nav class="navbar navbar-expand-lg fixed-top" id="navbarAll">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="navbarBurgrBtn">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="#" id="navbarLogo">Greyphoni</a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="navbarLink">Samsung</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="navbarLink">Apple</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="navbarLink">Huawei</a>
+        </li>
+      </ul>
+    </div>
+    <form class="form-inline">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="navbarSearchBtn">Search</button>
+    </form>
+    <a class="nav-link d-block d-sm-block d-md-none d-lg-none d-xl-none showModalWindow" data-toggle="modal" href="#myModal"></a>
     <!-- Start modal -->
     <div class="modal" role="dialog" id="navbarModal">
       <div class="modal-dialog">
         <!-- Start modal content -->
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title">000</h1>
-            <button type="button" class="close" data-dismiss="modal">X</button>
+            <button type="button" class="close" data-dismiss="modal">&time;</button>
+            <h1 class="modal-title">Votre panini</h1>
           </div>
           <div class="modal-body">
-            <p>Article 000</p>
+            <p>Article du cul</p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dimiss="modal">Oui</button>
+            <button type="button" class="btn btn-default" data-dimiss="modal">Non</button>
           </div>
         </div>
         <!-- End modal content -->
       </div>
     </div>
     <!-- End modal-->
-
-    <div class="container-fluid">
-
+  </nav>
+  <!-- End nav bar -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12">
+        <!-- accés au json -->
+        <div ng-app="myApp" ng-controller="myCtrl">
+          <div class="card" style="width:18rem; "ng-repeat="table in myTable">
+            <img class="card-img-top" src={{table.image}}>
+            <div class="card-body">
+              <div class="card-title">{{table.marque}}</div>
+              <div class="card-title">{{table.modele}}</div>
+              <td>{{table.prix}}</td>
+              <p class="card-text">{{table.description}}</p>
+              <a href="#" class="btn btn-primary">Panier</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  </body>
+  </div>
+
+  <script>
+  var app = angular.module('myApp', []);
+  app.controller('myCtrl', function($scope, $http) {
+    $http.get("assets/js/phone.json").then(function (response)
+    {$scope.myTable = response.data});
+  });
+
+  </script>
+</div>
+
+</body>
 </html>
