--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Greyphoni</title>
     <script src="assets/js/jquery-3.3.1.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/script.js"></script>
+
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
@@ -66,7 +68,7 @@
         <!-- Start du jumbotron -->
         <div class="jumbotron">
           <h1>Bienvenue sur Greyphoni</h1>
-          <p>Présentation du cul</p>
+          <p>Présentation</p>
         </div>
         <!-- End du jumbotron -->
       </div>
@@ -112,6 +114,6 @@
       </div>
     </footer>
     <!-- End footer -->
-    
+
   </body>
 </html>
