--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         <div class="col-sm-12 col-md-6 col-lg-4">
           <h3>Produits</h3>
           <ul>
-            <li><a href="https://www.apple.com/fr/%22%3EApple">Apple</a></li>
-            <li><a href="https://consumer.huawei.com/fr/%22%3EHuawei">Huawei</a></li>
-            <li><a href="https://www.samsung.com/fr/%22%3Esamsung">samsung</a></li>
+            <li><a href="https://www.apple.com/fr/">Apple</a></li>
+            <li><a href="https://consumer.huawei.com/fr/">Huawei</a></li>
+            <li><a href="https://www.samsung.com/fr/">samsung</a></li>
           </ul>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
