rien de particulier

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Greyphoni</title>
-
     <script src="assets/js/jquery-3.3.1.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
@@ -18,19 +17,19 @@
     <!-- Start nav bar -->
     <nav class="navbar navbar-expand-lg fixed-top" id="navbarAll" >
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="navbarBurgrBtn">
-        <span class="navbar-toggler-icon"> ☰ </span>
+        <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand" href="#" id="navbarLogo">Greyphoni</a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#" id="navbarLink">Apple</a>
+            <a class="nav-link" class="appleLink" href="#" id="navbarLink">Apple</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" id="navbarLink">Samsung</a>
+            <a class="nav-link" class="samsungLink" href="#" id="navbarLink">Samsung</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" id="navbarLink">Huawei</a>
+            <a class="nav-link" class="huaweiLink" href="#" id="navbarLink">Huawei</a>
           </li>
         </ul>
       </div>
@@ -57,7 +56,7 @@
           <p>Article 000</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dimiss="modal">Oui</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">Oui</button>
         </div>
       </div>
       <!-- End modal content -->
@@ -109,6 +108,6 @@
 
   </div>
   <!-- End container full page -->
-  
+
   </body>
 </html>
