--- a/index.html
+++ b/index.html
@@ -14,150 +14,133 @@
   <script src="assets/js/script.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
 </head>
-<body>
-  <!-- Start nav bar -->
-  <nav class="navbar navbar-expand-lg fixed-top" id="navbarAll">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="navbarBurgrBtn">
-      <span class="navbar-toggler-icon"></span>
+<body  ng-app="store" ng-controller="StoreController as store">
+      <!-- Start nav bar -->
+      <nav class="navbar navbar-expand-lg fixed-top" id="navbarAll" >
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="navbarBurgrBtn">
+          <span class="navbar-toggler-icon"> ☰ </span>
 
-  <link rel="shortcut icon" href="assets/img/iconp.ico" type="image/x-icon"/>
-  <title>Greyphoni</title>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-  <script src="assets/js/jquery-3.3.1.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
-  <script src="assets/js/script.js"></script>
+        </button>
+        <a class="navbar-brand" href="#" id="navbarLogo">Greyphoni</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#" id="navbarLink">Samsung</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" id="navbarLink">Apple</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" id="navbarLink">Huawei</a>
+            </li>
+          </ul>
+        </div>
+        <!--<form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="navbarSearchBtn">Search</button>
+      </form>
+    -->
+    <a type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#navbarModal" id="navbarModalBtn"><i class="fa fa-shopping-cart"></i><span class="badge">{{store.totalItems}}</span></a>
+  </nav>
+  <!-- End nav bar -->
 
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="assets/css/style.css" />
-</head>
-<body>
-
-  <!-- Start nav bar -->
-  <nav class="navbar navbar-expand-lg fixed-top" id="navbarAll" >
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="navbarBurgrBtn">
-      <span class="navbar-toggler-icon"> ☰ </span>
-
-    </button>
-    <a class="navbar-brand" href="#" id="navbarLogo">Greyphoni</a>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#" id="navbarLink">Samsung</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" id="navbarLink">Apple</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" id="navbarLink">Huawei</a>
-        </li>
-      </ul>
-    </div>
-    <!--<form class="form-inline">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="navbarSearchBtn">Search</button>
-  </form>
--->
-<a type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#navbarModal" id="navbarModalBtn">Panier</a>
-</nav>
-<!-- End nav bar -->
-
-<!-- Start modal -->
-<div class="modal" role="dialog" id="navbarModal">
-  <div class="modal-dialog">
-    <!-- Start modal content -->
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title">Mon panier</h1>
-        <button type="button" class="close" data-dismiss="modal">X</button>
-      </div>
-      <div class="modal-body">
-        <div class="row">
-          <div class="col-lg-12">
+  <!-- Start modal -->
+  <div>
+    <div class="modal" role="dialog" id="navbarModal">
+      <div class="modal-dialog modal-lg">
+        <!-- Start modal content -->
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title">Mon panier</h1>
+            <button type="button" class="close" data-dismiss="modal">X</button>
+          </div>
+          <div class="modal-body">
             <div class="row">
-              <div class="col-lg-2">
-                <img src="{{immage}}" class="img-thumbnail" />
-              </div>
-              <div class="col-lg-2">
-                <input class="number"></input>
-              </div>
-              <div class="col-lg-2">
+              <div class="col-lg-12">
                 <div class="row">
-                  <div class="col-lg-12">
-                    <button class="increase">+</button>
+                  <div class="col-lg-2">
+                    <img src="{{immage}}" class="img-thumbnail" />
+                  </div>
+                  <div class="col-lg-2">
+                    <input class="number"></input>
+                  </div>
+                  <div class="col-lg-2">
+                    <div class="row">
+                      <div class="col-lg-12">
+                        <button class="increase">+</button>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-lg-12">
+                        <button class="decrease">-</button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2">
+                    <span class="price">Prix : </span>
+                  </div>
+                  <div class="col-lg-2">
+                    {{prix}}
+                  </div>
+                  <div class="col-lg-2">
+                    <button class="trash"><i class="fa fa-trash-o"></i></button>
                   </div>
                 </div>
-                <div class="row">
-                  <div class="col-lg-12">
-                    <button class="decrease">-</button>
-                  </div>
-                </div>
               </div>
-              <div class="col-lg-2">
-                <span class="price">Prix : </span>
+            </div>
+            <div class="row">
+              <div class="col-lg-6">
+                <span class="total">Total : </span>
               </div>
-              <div class="col-lg-2">
-                {{prix}}
-              </div>
-              <div class="col-lg-2">
-                <button class="trash"><i class="fa fa-trash-o"></i></button>
+              <div class="col-lg-6">
+                <span>{{total}}</span>
               </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-6">
-            <span class="total">Total : </span>
-          </div>
-          <div class="col-lg-6">
-            <span>{{total}}</span>
+
+          <!-- End modal content -->
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Valider</button>
           </div>
         </div>
-      </div>
-
-      <!-- End modal content -->
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Oui</button>
+        <!-- End modal content -->
       </div>
     </div>
-    <!-- End modal content -->
   </div>
-</div>
-<!-- End modal-->
+  <!-- End modal-->
 
-<!-- Start container full page -->
-<div class="container-fluid">
-
-  <!-- Start jumbotron -->
-  <div class="container">
-    <div class="jumbotron">
-      <h1>Bienvenue sur Greyphoni</h1>
-      <p>0000000000000000000000000</p>
-    </div>
-  </div>
-  <!-- End jumbotron -->
-
-  <!-- Start card article -->
+  <!-- Start container full page -->
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-12">
-        <!-- accés au json -->
-        <div ng-app="myApp" ng-controller="myCtrl">
-          <div class="card" style="width:18rem;" ng-repeat="table in myTable">
-            <img class="card-img-top" src={{table.image}}>
-            <div class="card-body">
-              <div class="card-title">{{table.marque}}</div>
-              <div class="card-title">{{table.modele}}</div>
-              <td>{{table.prix}}</td>
-              <p class="card-text">{{table.description}}</p>
-              <a href="#" class="btn btn-primary">Panier</a>
+
+    <!-- Start jumbotron -->
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Bienvenue sur Greyphoni</h1>
+        <p>0000000000000000000000000</p>
+      </div>
+    </div>
+    <!-- End jumbotron -->
+
+    <!-- Start card article -->
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12">
+          <!-- accés au json -->
+
+            <div class="card" style="width:18rem;" ng-repeat="table in myTable">
+              <img class="card-img-top" src={{table.image}}>
+              <div class="card-body">
+                <div class="card-title">{{table.marque}}</div>
+                <div class="card-title">{{table.modele}}</div>
+                <td>{{table.prix}}</td>
+                <p class="card-text">{{table.description}}</p>
+                <button type="button" class="btn btn-primary btn-lg demo-addtocart" ng-click="store.addItems()">Ajouter au panier</a>
+              </div>
             </div>
-          </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- Start footer -->
+    <!-- Start footer -->
     <footer>
       <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-4">
@@ -197,15 +180,15 @@
     </footer>
     <!-- End footer -->
 
-<!-- End card article -->
+    <!-- End card article -->
 
-<script>
-var app = angular.module('myApp', []);
-app.controller('myCtrl', function($scope, $http) {
-  $http.get("assets/js/phone.json").then(function (response)
-  {$scope.myTable = response.data});
-});
-</script>
+    <script>
+    var app = angular.module('store', []);
+    app.controller('StoreController', function($scope, $http) {
+      $http.get("assets/js/phone.json").then(function (response)
+      {$scope.myTable = response.data});
+    });
+  </script>
 </div>
 <!-- End container full page -->
 
