--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<<<<<<< HEAD
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,14 +7,14 @@
   <title>Greyphoni</title>
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="bootstrapcdnassets/css/style.css" />
-  <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/css/style.css" />
   <script src="assets/js/jquery-3.3.1.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
-  <script src="assets/js/script.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
+  <script src="assets/js/script.js"></script>
 </head>
-<body  ng-app="store" ng-controller="StoreController as store">
+<body ng-app="myApp">
       <!-- Start nav bar -->
       <nav class="navbar navbar-expand-lg fixed-top" id="navbarAll" >
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="navbarBurgrBtn">
@@ -41,13 +40,13 @@
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="navbarSearchBtn">Search</button>
       </form>
     -->
-    <a type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#navbarModal" id="navbarModalBtn"><i class="fa fa-shopping-cart"></i><span class="badge">{{store.totalItems}}</span></a>
+    <a type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#navbarModal" id="navbarModalBtn"><i class="fa fa-shopping-cart"><span class="badge">{{store.totalItems}}</span></a>
   </nav>
   <!-- End nav bar -->
 
   <!-- Start modal -->
-  <div>
-    <div class="modal" role="dialog" id="navbarModal">
+  <div class="storeCtrl">
+    <div name="cart" class="modal" role="dialog" id="navbarModal">
       <div class="modal-dialog modal-lg">
         <!-- Start modal content -->
         <div class="modal-content">
@@ -60,7 +59,7 @@
               <div class="col-lg-12">
                 <div class="row">
                   <div class="col-lg-2">
-                    <img src="{{immage}}" class="img-thumbnail" />
+                    <img src="{{table.immage}}" class="img-thumbnail" />
                   </div>
                   <div class="col-lg-2">
                     <input class="number"></input>
@@ -105,111 +104,7 @@
           </div>
         </div>
         <!-- End modal content -->
-=======
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="assets/img/iconp.ico" type="image/x-icon"/>
-    <title>Greyphoni</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-    <script src="assets/js/jquery-3.3.1.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/script.js"></script>
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-  </head>
-  <body>
-
-  <!-- Start nav bar -->
-  <nav class="navbar navbar-expand-lg fixed-top" id="navbarAll" >
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" id="navbarBurgrBtn">
-        <span class="navbar-toggler-icon"> ☰ </span>
-
-      </button>
-      <a class="navbar-brand" href="#" id="navbarLogo">Greyphoni</a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#" id="navbarLink">Samsung</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" id="navbarLink">Apple</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" id="navbarLink">Huawei</a>
-          </li>
-        </ul>
       </div>
-      <!--<form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="navbarSearchBtn">Search</button>
-      </form>
-      -->
-      <a type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#navbarModal" id="navbarModalBtn">Panier</a>
-    </nav>
-  <!-- End nav bar -->
-
-  <!-- Start modal -->
-  <div class="modal" role="dialog" id="navbarModal">
-    <div class="modal-dialog">
-      <!-- Start modal content -->
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title">Mon panier</h1>
-          <button type="button" class="close" data-dismiss="modal">X</button>
-        </div>
-        <div class="modal-body">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="row">
-                <div class="col-lg-2">
-                  <img src="{{immage}}" class="img-thumbnail" />
-                </div>
-                <div class="col-lg-2">
-                  <input class="number"></input>
-                </div>
-                <div class="col-lg-2">
-                  <div class="row">
-                    <div class="col-lg-12">
-                      <button class="increase">+</button>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-lg-12">
-                      <button class="decrease">-</button>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-2">
-                  <span class="price">Prix : </span>
-                </div>
-                <div class="col-lg-2">
-                  {{prix}}
-                </div>
-                <div class="col-lg-2">
-                  <button class="trash"><i class="fa fa-trash-o"></i></button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-6">
-              <span class="total">Total : </span>
-            </div>
-            <div class="col-lg-6">
-              <span>{{total}}</span>
-            </div>
-          </div>
-        </div>
-
-        <!-- End modal content -->
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Oui</button>
-        </div>
->>>>>>> bd2dd26df40011062a3f888832f57441b94c0caa
-      </div>
-      <!-- End modal content -->
     </div>
   </div>
   <!-- End modal-->
@@ -231,33 +126,21 @@
       <div class="row">
         <div class="col-lg-12">
           <!-- accés au json -->
-<<<<<<< HEAD
-
-=======
-          <div ng-app="myApp" ng-controller="myCtrl">
->>>>>>> bd2dd26df40011062a3f888832f57441b94c0caa
+          <div ng-controller="cardCtrl">
             <div class="card" style="width:18rem;" ng-repeat="table in myTable">
-              <img class="card-img-top" src={{table.image}}>
+              <img name="image" ng-model="image" class="image card-img-top" src={{table.image}}>
               <div class="card-body">
-                <div class="card-title">{{table.marque}}</div>
-                <div class="card-title">{{table.modele}}</div>
-                <td>{{table.prix}}</td>
-                <p class="card-text">{{table.description}}</p>
-<<<<<<< HEAD
-                <button type="button" class="btn btn-primary btn-lg demo-addtocart" ng-click="store.addItems()">Ajouter au panier</a>
-=======
-                <a href="#" class="btn btn-primary">Panier</a>
->>>>>>> bd2dd26df40011062a3f888832f57441b94c0caa
+                <div name="marque" ng-model="marque" class="card-title">{{table.marque}}</div>
+                <div name="model" ng-model="modele" class="card-title">{{table.modele}}</div>
+                <td name="prix">{{table.prix}}</td>
+                <p ng-model="description" name="description" class="card-text">{{table.description}}</p>
+                <button type="button" class="btn btn-primary" ng-click="store.addItems()">Ajouter au panier</a>
               </div>
             </div>
+          </div>
         </div>
       </div>
     </div>
-<<<<<<< HEAD
-=======
-    <!-- End card article -->
-
->>>>>>> bd2dd26df40011062a3f888832f57441b94c0caa
     <!-- Start footer -->
     <footer>
       <div class="row">
@@ -298,31 +181,9 @@
     </footer>
     <!-- End footer -->
 
-<<<<<<< HEAD
     <!-- End card article -->
-
-    <script>
-    var app = angular.module('store', []);
-    app.controller('StoreController', function($scope, $http) {
-      $http.get("assets/js/phone.json").then(function (response)
-      {$scope.myTable = response.data});
-    });
-  </script>
 </div>
 <!-- End container full page -->
-=======
 
-    <script>
-      var app = angular.module('myApp', []);
-      app.controller('myCtrl', function($scope, $http) {
-        $http.get("assets/js/phone.json").then(function (response)
-        {$scope.myTable = response.data});
-      });
-    </script>
-
-  </div>
-  <!-- End container full page -->
->>>>>>> bd2dd26df40011062a3f888832f57441b94c0caa
-
-  </body>
+</body>
 </html>
