activation des liens de la navbar

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#" ng-click="changeMarque('Samsung')" id="navbarLink">Samsung</a>
+            <a class="nav-link" href="#navbarMidAll" ng-click="changeMarque('Samsung')" id="navbarLink">Samsung</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link"  ng-click="changeMarque('Apple')" id="navbarLink">Apple</a>
+            <a class="nav-link" href="#navbarMidAll" ng-click="changeMarque('Apple')" id="navbarLink">Apple</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" ng-click="changeMarque('Huawei')" id="navbarLink">Huawei</a>
+            <a class="nav-link" href="#navbarMidAll" ng-click="changeMarque('Huawei')" id="navbarLink">Huawei</a>
           </li>
         </ul>
       </div>
